BUILD: Added medium breakpoint grid

--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
   <div class="row">
-    <div class="col s4 l3-8">
+    <div class="content-col">
       {{- .Content -}}
     </div>
   </div>
 
   <div class="blocks">
     <div class="row">
-      <div class="col s4 l2-9">
+      <div class="col wide-col">
         <div class="blocks__block chart">
           <h2 class="chart__title">Distance by foot (miles)</h2>
 
