--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -5,9 +5,9 @@
   >
 
   <div class="row">
-    <div class="col s4 l3-8">
-      <div class="row row--l6">
-        <div class="col s4 l5">
+    <div class="content-col">
+      <div class="row row--m8 row--l6">
+        <div class="col s4 m6 l5">
           <div class="card card--{{ lower $.Page.Title }}">
             <h1 class="card__title">{{ .Params.Title }}</h1>
 
