--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <!-- Partials > Footer. -->
 <!-- Site footer. -->
 <div class="row">
-  <div class="footer__base col s4 l3-8">
+  <div class="footer__base content-col">
     <span class="footer__item sub-text">
       &copy; 2008-{{ now.Format "2006" }} Craig Baldwin
     </span>
