--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -4,7 +4,7 @@
 {{ $page := .Title }}
 
 <div class="row">
-  <div class="col s4 l3-8">
+  <div class="content-col">
     <h2 class="visually-hidden">Other pages</h2>
 
     <div class="footer__footnotes">
