--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="row">
-    <header class="header col s4 l3-8" role="banner">
+    <header class="header col content-col" role="banner">
       <div class="header__container">
         <a class="skip-link" href="{{ .Permalink }}#MainContent">
           Skip to content
