--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -1,12 +1,12 @@
 {{ define "main" }}
   <div class="row">
-    <div class="col s4 l3-8">
+    <div class="content-col">
       {{- .Content -}}
     </div>
   </div>
 
   <div class="row">
-    <div class="col s4 l2-9">
+    <div class="col wide-col">
       {{ partial "map" . }}
 
       <div class="blocks">
