--- a/site/layouts/_default/section.html
+++ b/site/layouts/_default/section.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="row">
-    <div class="col s4 l3-8">
+    <div class="content-col">
       {{- .Content -}}
     </div>
   </div>
