--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="content-col">
-      <div class="row row--m8 row--l6">
+      <div class="row row--m6">
         <div class="col s4 m6 l5">
           <div class="card card--{{ lower $.Page.Title }}">
             <h1 class="card__title">{{ .Params.Title }}</h1>
