--- a/site/layouts/partials/block.html
+++ b/site/layouts/partials/block.html
@@ -128,7 +128,7 @@
   {{ end }}
 
   {{ if (eq .Params.block_type "clients") }}
-    <div class="row row--m10 row--l8">
+    <div class="row row--m8">
       <div class="col s4 m8 l5-10">
         <div class="block__content">
           {{ .Content }}
