--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -2,7 +2,7 @@
 <!-- Card title block. -->
 {{ $page := $.Page.Title }}
 
-<div class="row row--m8 row--l6">
+<div class="row row--m6">
   <div class="col s4 m6 l5">
     <div class="card card--{{ lower $.Page.Title }}">
       {{ if .Get "title" }}
