--- a/site/layouts/_default/work.html
+++ b/site/layouts/_default/work.html
@@ -18,7 +18,7 @@
 
         <h2 class="visually-hidden">More</h2>
 
-        <div class="row">
+        <div class="row row--l8">
           {{ range .Pages.ByTitle }}
             {{ if (eq .Params.block_type "logos") }}
               <div class="col s2 m2 l2">
